--- a/src/app/pages/posts/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/pages/posts/components/delete-dialog/delete-dialog.component.html
@@ -8,7 +8,7 @@
 <div mat-dialog-actions class="flex-end-center gap-025">
   <button mat-raised-button color="warn" (click)="deletePost()" *ngIf="!loading" @inOutRight [@.disabled]="!loading">
     <span class="m-r-05">Eliminar</span>
-    <mat-icon class="fs-medium">delete</mat-icon>
+    <!-- <mat-icon class="fs-medium">delete</mat-icon> -->
   </button>
   <div class="shapes-loader" *ngIf="loading" @inOutLeft></div>
 
