fix(posts): Fix margins

--- a/src/app/pages/posts/components/posts-filters/posts-filters.component.html
+++ b/src/app/pages/posts/components/posts-filters/posts-filters.component.html
@@ -62,7 +62,7 @@
     </app-rounded-select>
   </div>
 
-  <div class="flex-col gap-05">
+  <div class="flex-col gap-05 m-t-3 lg-m-t-1">
     <button matRipple class="w-100 rounded-button bg-on-primary txt-primary ft-body" (click)="applyFilters()">
       <span>Aplicar filtros</span>
       <i-tabler name="filter-check" class="small-icon"></i-tabler>
