--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -3,7 +3,23 @@
     color: inherit;
     background-color: inherit;
     text-decoration: none;
-    border: none;
+    border: 0;
+    border-radius: 100em;
+    padding: calc(.5em + 2px) calc(1em + 2px); // 2px of border
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+
+    transition-property: transform, opacity, background-color;
+    transition-duration: .25s, .25s, .25s;
+}
+
+.rounded-border-button {
+    color: currentColor;
+    background-color: transparent;
+    text-decoration: none;
+    border: 2px solid currentColor;
     border-radius: 100em;
     padding: .5em 1em;
     display: flex;
@@ -30,18 +46,23 @@
     transition-duration: .25s, .25s, .25s;
 }
 
-.rounded-button:hover:not(:disabled),
-.circle-button:hover:not(:disabled) {
-    transform: translateY(-.5px);
+@media (min-width: 48rem) {
+    .rounded-button:hover:not(:disabled),
+    .circle-button:hover:not(:disabled),
+    .rounded-border-button:hover:not(:disabled) {
+        transform: translateY(-.5px);
+    }
 }
 
 .rounded-button:active:not(:disabled),
-.circle-button:active:not(:disabled) {
+.circle-button:active:not(:disabled),
+.rounded-border-button:active:not(:disabled) {
     transform: translateY(2px);
 }
 
 .rounded-button:disabled,
-.circle-button:disabled {
+.circle-button:disabled,
+.rounded-border-button:disabled {
     background-color: rgba(0, 0, 0, .1);
     color: black;
 }
