--- a/src/app/pages/posts/pages/post-detail/post-detail.component.html
+++ b/src/app/pages/posts/pages/post-detail/post-detail.component.html
@@ -45,10 +45,10 @@
             <span class="text-ellipsis">{{ post.mainFile.name }}</span>
             <span>{{ post.mainFile.ext }}</span>
         </button>
-        <button mat-icon-button>
+        <a mat-icon-button [href]="post.mainFile.url" download
+          [target]="post.mainFile.ngxDocViewer === 'office' ? '_self' : '_blank'" aria-label="Descargar">
           <i-tabler name="download" class="txt-on-background"></i-tabler>
-        </button>
-        <!-- <button matRipple class="rounded-button txt-blue">Ver</button> -->
+        </a>
       </div>
 
       <ng-container *ngFor="let file of post.supportingMaterial">
@@ -63,10 +63,10 @@
               <span class="text-ellipsis">{{ file.name }}</span>
               <span>{{ file.ext }}</span>
           </button>
-          <button mat-icon-button>
+          <a mat-icon-button [href]="file.url" download
+            [target]="file.ngxDocViewer === 'office' ? '_self' : '_blank'" aria-label="Descargar">
             <i-tabler name="download" class="txt-on-background"></i-tabler>
-          </button>
-          <!-- <button matRipple class="rounded-button txt-blue">Ver</button> -->
+          </a>
         </div>
       </ng-container>
     </div>
@@ -104,11 +104,17 @@
       <ngx-doc-viewer *ngIf="!!currentFile && !!currentViewer" [url]="currentFile.url" [viewer]="currentViewer">
       </ngx-doc-viewer>
     </div>
-    <div *ngIf="!hasPreview">
-      <img class="no-preview-image" src="/assets/images/no-preview.png" alt="Vista previa no disponible">
-      <p>Vista previa no disponible</p>
-      <p>Esta publicación no tiene archivos que se puedan ver sin descargar</p>
-      <p>Pronto permitiremos previsualizar más arhivos en Planishare 👀</p>
+    <div *ngIf="!currentFile?.ngxDocViewer && !!post" class="flex-col flex-center-center gap-05 text-center">
+      <img class="no-preview-image" src="/assets/images/construction-cuate.png" alt="Vista previa no disponible">
+      <p class="ft-title txt-primary">Vista previa no disponible 😢</p>
+      <div class="flex-center-center ft-body txt-secondary">
+        <p>Pero puedes descargar el archivo</p>
+        <a mat-icon-button [href]="currentFile?.url" [download]="currentFile?.fullName"
+          [target]="currentFile?.ngxDocViewer === 'office' ? '_self' : '_blank'" aria-label="Descargar">
+          <i-tabler name="download" class="txt-on-background"></i-tabler>
+        </a>
+      </div>
+      <p class="ft-label">Estamos trabajando para que puedas previsualizar más archivos en Planishare 👀</p>
     </div>
   </div>
 </main>
