--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -1,5 +1,6 @@
 // Rounded button
-.rounded-button {
+.rounded-button,
+.rounded-button--slime {
     color: inherit;
     background-color: inherit;
     text-decoration: none;
@@ -13,6 +14,10 @@
 
     transition-property: transform, opacity, background-color;
     transition-duration: .25s, .25s, .25s;
+}
+
+.rounded-button--slime {
+    padding: .25em .5em;
 }
 
 .rounded-border-button {
@@ -49,20 +54,23 @@
 @media (min-width: 48rem) {
     .rounded-button:hover:not(:disabled),
     .circle-button:hover:not(:disabled),
-    .rounded-border-button:hover:not(:disabled) {
+    .rounded-border-button:hover:not(:disabled),
+    .rounded-button--slime:hover:not(:disabled) {
         transform: translateY(-.5px);
     }
 }
 
 .rounded-button:active:not(:disabled),
 .circle-button:active:not(:disabled),
-.rounded-border-button:active:not(:disabled) {
+.rounded-border-button:active:not(:disabled),
+.rounded-button--slime:active:not(:disabled) {
     transform: translateY(2px);
 }
 
 .rounded-button:disabled,
 .circle-button:disabled,
-.rounded-border-button:disabled {
+.rounded-border-button:disabled,
+.rounded-button--slime:disabled {
     background-color: rgba(0, 0, 0, .1);
     color: black;
 }
