fix(planishare): Small style changes

--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -82,7 +82,7 @@
       </mat-form-field>
 
       <button appLoadingButton [loading]="loading"
-        class="rounded-button bg-secondary txt-on-secondary w-100 m-t-1 shadow-md" type="submit">
+        class="rounded-button bg-primary txt-on-primary w-100 m-t-1 shadow-md" type="submit">
         Registrarse
       </button>
     </form>
