--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -49,7 +49,7 @@
       </mat-form-field>
 
       <button appLoadingButton [loading]="loading"
-        class="rounded-button bg-secondary txt-on-secondary w-100 m-t-1 shadow-md" type="submit">
+        class="rounded-button bg-primary txt-on-primary w-100 m-t-1 shadow-md" type="submit">
         Iniciar sesión
       </button>
     </form>
