--- a/src/app/pages/posts/pages/post-detail/post-detail.component.html
+++ b/src/app/pages/posts/pages/post-detail/post-detail.component.html
@@ -1,7 +1,7 @@
 <main class="container flex-col lg-flex-row gap-05 bg-background p-y-1">
   <div class="flex-col gap-05 post-info">
     <a matRipple [routerLink]="['/posts']" [queryParams]="searchParams"
-      class="ft-body rounded-button--slime bg-primary txt-on-primary">
+      class="ft-body rounded-button--slim bg-primary txt-on-primary">
       <i-tabler name="arrow-left"></i-tabler>
       <span>Volver a resultados</span>
     </a>
@@ -79,9 +79,9 @@
       </div>
   
       <div class="ft-label flex-center-center flex-wrap gap-05">
-        <span class="rounded-tag--slime bg-academic-level txt-on-academic-level flex-grow-1">{{ post.academicLevel.name }}</span>
-        <span class="rounded-tag--slime bg-axis txt-on-axis flex-grow-1">{{ post.axis.name }}</span>
-        <span class="rounded-tag--slime bg-subject txt-on-subject flex-grow-1">{{ post.axis.subject.name }}</span>
+        <span class="rounded-tag--slim bg-academic-level txt-on-academic-level flex-grow-1">{{ post.academicLevel.name }}</span>
+        <span class="rounded-tag--slim bg-axis txt-on-axis flex-grow-1">{{ post.axis.name }}</span>
+        <span class="rounded-tag--slim bg-subject txt-on-subject flex-grow-1">{{ post.axis.subject.name }}</span>
       </div>
   
       <div class="ft-label flex-between-center f-weight-500">
