--- a/src/assets/styles/components/_tags.scss
+++ b/src/assets/styles/components/_tags.scss
@@ -1,5 +1,5 @@
 .rounded-tag,
-.rounded-tag--slime {
+.rounded-tag--slim {
     text-decoration: none;
     border-radius: 100em;
     border: none;
@@ -10,16 +10,16 @@
     gap: .5rem;
 }
 
-.rounded-tag--slime {
+.rounded-tag--slim {
     padding: .25em .5em;
 }
 
-.rounded-tag--slime:has(.mat-icon-button.small-icon-button) {
+.rounded-tag--slim:has(.mat-icon-button.small-icon-button) {
     padding-left: calc(.25em + 14px);
 }
 
 .rounded-border-tag,
-.rounded-border-tag--slime {
+.rounded-border-tag--slim {
     text-decoration: none;
     border: 2px solid currentColor;
     border-radius: 100em;
@@ -30,6 +30,6 @@
     gap: .5rem;
 }
 
-.rounded-border-tag--slime {
+.rounded-border-tag--slim {
     padding: .2em .5em;
 }
